# fbindgen

./: README.md  meson.build
src/: clang.cpp  clang.h  detect.cpp  detect.h  function.cpp  function.h  macro.cpp  macro.h  main.cpp  stdafx.h  types.cpp  types.h
tests/: detect.cpp  fgen.h  test.sh
tests/alignof_keyword/: filters.txt  in.h  ref.rs
tests/anon_union/: filters.txt  in.h  ref.rs
tests/asm_keyword/: filters.txt  ref.rs
tests/bit_complement_define/: filters.txt  in.h  ref.rs
tests/for_loop/: filters.txt  in.h  ref.rs
tests/function_no_proto/: filters.txt  in.h  ref.rs
tests/function_ptr/: filters.txt  in.h  ref.rs
tests/fwd_type_patch/: filters.txt  in.h  ref.rs
tests/incomplete_array/: filters.txt  ref.rs
tests/keywords/: filters.txt  in.h  ref.rs
tests/macro_prerename/: filters.txt  ref.rs
tests/neg1_enum/: filters.txt  in.h  ref.rs
tests/neg1_ptr/: filters.txt  in.h  ref.rs
tests/parens/: in.h  ref.rs
tests/size_t/: filters.txt  in.h  ref.rs
tests/static/: filters.txt  in.h
tests/typeof/: filters.txt  in.h  ref.rs
tests/u64_typedef/: in.h  ref.rs
